--- a/relatorio/main.tex
+++ b/relatorio/main.tex
@@ -76,6 +76,17 @@
 % Aqui as páginas estão ajustadas segundo as regras da ABNT
 \geometry{hmargin={3cm,2cm},vmargin={3cm,2cm}}          %Mudar margens da página
 
+
+% Configuração do tikz para fluxograma
+\usetikzlibrary{shapes.geometric, arrows}
+\tikzstyle{startstop} = [rectangle, rounded corners, minimum width=3cm, minimum height=1cm,text centered, draw=black]
+\tikzstyle{io} = [trapezium, trapezium left angle=70, trapezium right angle=110, minimum width=3cm, minimum height=1cm, text centered, draw=black]
+\tikzstyle{process} = [rectangle, minimum width=3cm, minimum height=1cm, text centered, draw=black]
+\tikzstyle{decision} = [diamond, minimum width=3cm, minimum height=1cm, text centered, draw=black]
+\tikzstyle{conector} = [circle, minimum width=0.5cm, minimum height=0.5cm, text centered, draw=black]
+\tikzstyle{arrow} = [thick,->,>=stealth]
+\tikzstyle{line} = [draw, -latex']
+
 % Tem aguma coisa a ver com a química, sem isso o pacote parece não funcionar
 % direito
 \newcommand\setpolymerdelim[2]{\def\delimleft{#1}\def\delimright{#2}}
@@ -410,6 +421,34 @@ width0pt\right\delimright_{\rlap{$\scriptstyle#3$}}$};}}
          }
          \makebraces[5pt,25pt]{\!\!\!n}{op}{cl}
          \bigskip
+      \end{figure}
+      
+      \begin{figure}[H]
+         \centering
+         \caption{\label{fig:fluxEuler}\footnotesize Exemplo de fluxograma
+         para EDO de 1ª ordem.}
+         \begin{tikzpicture}[node distance=2cm]
+         \node (start) [startstop] {$f = f_0$; $x = x_0$};
+         \node (open) [process, below of=start] {Abrir \textit{arquivo}};
+
+         \node (for) [decision, below of=open] {$x \leq x_f$?};
+         \node (pro1) [process, below of=for, yshift=-0.8cm] {$f = f + F(x, f) dx$};
+         \node (pro2) [process, below of=pro1] {Escrever $x$ e $f$ em \textit{arquivo}};
+         \node (pro3) [process, below of=pro2] {$x = x + dx$};
+
+         \node (conec) [process, right of=for, xshift=3.5cm] {Fechar \textit{arquivo}};
+         \node (stop) [startstop, below of=conec] {Fim};
+
+         \draw [arrow] (start) -- (open);
+         \draw [arrow] (open) -- (for);
+         \draw [arrow] (for) -- node[anchor=east] {Sim} (pro1);
+         \draw [arrow] (pro1) -- (pro2);
+         \draw [arrow] (pro2) -- (pro3);
+         \draw [arrow] (conec) -- (stop);
+         \draw [arrow] (for) -- node[anchor=south] {Não} (conec);
+         \path [line] (pro3) -- ++(-3.5,0) |- (for);
+         \end{tikzpicture}
+         \legend{\footnotesize Fonte: Autores.}
       \end{figure}
 
       {\let\clearpage\relax 
