--- a/relatorio/reference.bib
+++ b/relatorio/reference.bib
@@ -48,40 +48,40 @@
 	Year = {2016}
 }
 @book{moyses1,
-	Address = {São Paulo},
-	Author = {Moysé Nussenzveig},
-	volume = {1},
-	Edition = {4ª},
-	Publisher = {Edgard Blücher},
-	Title = {Curso de Física},
-	Year = {2002}
+   title = {Curso de Física Básica 1},
+   author = {Herch Moyses Nussenzveig},
+   Publisher = {Edgard Blücher},
+   Address = {São Paulo},
+   year = {2013},
+   Edition = {5ª},
+   isbn = {978-85-212-0745-0}
 }
 @book{moyses2,
-	Address = {São Paulo},
-	Author = {Moysé Nussenzveig},
-	volume = {2},
-	Edition = {4ª},
-	Publisher = {Edgard Blücher},
-	Title = {Curso de Física},
-	Year = {2002}
+   title = {Curso de Física Básica 2},
+   author = {Herch Moyses Nussenzveig},
+   Publisher = {Edgard Blücher},
+   Address = {São Paulo},
+   year = {2014},
+   Edition = {5ª},
+   isbn = {978-85-212-0747-4}
 }
 @book{moyses3,
-	Address = {São Paulo},
-	Author = {Moysé Nussenzveig},
-	volume = {3},
-	Edition = {4ª},
-	Publisher = {Edgard Blücher},
-	Title = {Curso de Física},
-	Year = {2002}
+   title = {Curso de Física Básica 3},
+   author = {Herch Moyses Nussenzveig},
+   Publisher = {Edgard Blücher},
+   Address = {São Paulo},
+   year = {2015},
+   Edition = {2ª},
+   isbn = {978-85-212-0802-0}
 }
 @book{moyses4,
-	Address = {São Paulo},
-	Author = {Moysé Nussenzveig},
-	volume = {4},
-	Edition = {4ª},
-	Publisher = {Edgard Blücher},
-	Title = {Curso de Física},
-	Year = {2002}
+   title = {Curso de física básica},
+   author = {Herch Moyses Nussenzveig},
+   Publisher = {Edgard Blücher},
+   Address = {São Paulo},
+   year = {1998},
+   volume = {4},
+   isbn = {978-85-212-0163-2}
 }
 @book{Halliday1,
 	Address = {Rio de Janeiro},
