--- a/exemplos/CV/main.tex
+++ b/exemplos/CV/main.tex
@@ -90,7 +90,7 @@
       \tiny
       \textbf{\href{https://ufal.br/}{Universidade Federal de Alagoas}}\\
       \textbf{Instituto de Física}\\
-      57072-900 Macei\'o, AL, Brasil}
+      57072-900 Macei\'o, AL, Brasil
 
       \columnbreak
 
