--- a/modelos/relatorio_ufal/reference.bib
+++ b/modelos/relatorio_ufal/reference.bib
@@ -48,13 +48,14 @@
 	Year = {2016}
 }
 @book{moyses1,
-   title = {Curso de Física Básica 1},
-   author = {Herch Moyses Nussenzveig},
-   Publisher = {Edgard Blücher},
-   Address = {São Paulo},
-   year = {2013},
-   Edition = {5ª},
-   isbn = {978-85-212-0745-0}
+Title     = "Curso de F\'isica B\'asica: Mec\^anica",
+Author    = "Herch Moys\'es Nussenzveig",
+Address   = "S\~ao Paulo",
+Publisher = "Edgard Bl\"ucher",
+volume    = "1",
+Edition   = "5",
+Year      = "2013",
+isbn      = "852120745X",
 }
 @book{moyses2,
    title = {Curso de Física Básica 2},
