Atualizado data da última alteração

--- a/modelos/relatorio_ufal/reference.bib
+++ b/modelos/relatorio_ufal/reference.bib
@@ -51,7 +51,7 @@
 Title     = "Curso de F\'isica B\'asica: Mec\^anica",
 Author    = "Herch Moys\'es Nussenzveig",
 Address   = "S\~ao Paulo",
-Publisher = "Edgard Bl\"ucher",
+Publisher = {Edgard Bl\"ucher},
 volume    = "1",
 Edition   = "5",
 Year      = "2013",
