--- a/modelos/relatorio_ufal/configuracao/config.sty
+++ b/modelos/relatorio_ufal/configuracao/config.sty
@@ -138,7 +138,8 @@
 % ---
 % Palete de cores
 % ---
-\RequirePackage{color, xcolor}
+\RequirePackage{color}
+\RequirePackage[table,xcdraw]{xcolor}
 
 \definecolor{airforceblue}{rgb}{0.36, 0.54, 0.66}
 \definecolor{asparagus}{rgb}{0.53, 0.66, 0.42}
