--- a/modelos/relatorio_ufal/configuracao/imgs.sty
+++ b/modelos/relatorio_ufal/configuracao/imgs.sty
@@ -3,3 +3,5 @@
 \RequirePackage[caption = false]{subfig}    % Insercao de subfiguras
 \RequirePackage{caption}                    % Insercao de legendas nas figuras
 \RequirePackage{float}                      %
+
+\graphicspath{{figuras/}}
