--- a/modelos/relatorio_ufal/main.tex
+++ b/modelos/relatorio_ufal/main.tex
@@ -1,4 +1,5 @@
-%  Encoding: UTF-8
+% Encoding: UTF-8
+% Tested on: TeX Live 2022, 
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% %
 % Autor: Ismael Felipe Ferreira dos Santos,
 %        Instituto de Física,
@@ -51,7 +52,7 @@
    como requisito para avaliação na disciplina Tal.
 }
 \dedicatoria{
-   Dedico este modelo a todo aqueles que tem ou já tiveram muita dor de
+   Dedico este modelo a todos aqueles que tem ou já tiveram muita dor de
    cabeça com o \LaTeX.
 }
 \agradecimentos{
